# aks-rcs

./: LICENSE  RCS_USER_MANUAL.md  README.md  pyproject.toml  racers_list.yaml
evgp_rcs/: buttonstatecontroller.py  gui.py  race.py  rcsmodel.py  rcsstatemanager.py  tcpclient.py  tcpserver.py
tests/: test_evgp_rcs.py
