[tool.poetry]
name = "evgp-rcs"
version = "0.1.0"
description = ""
authors = ["Brian Cochran Github @btdubs"]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.2"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
